--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ facebook_username:
 github_username:  princewang1994
 email: princewang1994@gmail.com
 weibo_username: 
-zhihu_username: princewang1994
+zhihu_username: princewang
 linkedIn_username: 
 dribbble_username:
 
@@ -29,7 +29,7 @@ description_footer: 记录技术路上的点滴
 # two ways to comment, only choose one, and use your own short name
 # 两种评论插件，选一个就好了，使用自己的 short_name
 duoshuo_shortname: #hygblog
-disqus_shortname: princewang1994
+disqus_shortname: princewang
 
 # statistic analysis 统计代码
 # 百度统计 id，将统计代码替换为自己的百度统计id，即
