--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: Prince Home
-brief-intro: Prince Tech Home
+brief-intro: Stay Follish, Stay Hungry
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://princewang1994.github.io" # the base hostname & protocol for your site
 
