--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ facebook_username:
 github_username:  princewang1994
 email: princewang1994@gmail.com
 weibo_username: 
-zhihu_username: princewang
+zhihu_username: princewang-65
 linkedIn_username: 
 dribbble_username:
 
@@ -36,7 +36,7 @@ disqus_shortname: princewang
 # hm.src = "//hm.baidu.com/hm.js?xxxxxxxxxxxx";
 # xxxxx字符串
 baidu_tongji_id: d6c24a78b938f8067d6fcfd2bdb4b28e
-google_analytics_id: UA-131074588-1 # google 分析追踪id
+# google_analytics_id: UA-131074588-1 # google 分析追踪id
 
 # Build settings
 markdown: kramdown
